# slowat

./: .gitignore  .pre-commit-config.yaml  README.md  bash_aliases  main.py  pyproject.toml  setup.py  testme.py  train.py
audioseal/: __init__.py  builder.py  models.py
cards/: audioseal_detector_16bits.yaml  audioseal_wm_16bbits.yaml
configs/: train_defaults.yaml
configs/dataset/: cifar10.yaml
configs/mode/: cluster.yaml  local.yaml
configs/model/: cnn.yaml
configs/trainer/: pytorch.yaml
tests/: test_datasets.py
